--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
-hello I am Sneha Adlakha...
+This is show case of my projects 
+I am Learning web technology.
 <body>
     
 </body>
