docs:addred description
A

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 This is show case of my projects 
 I am Learning web technology.
+
+My Hobbies are:
+Reading Books,
+watching Movies
+And Last not the Least Programming
 <body>
     
 </body>
